fixed reset button jump

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -76,14 +76,32 @@ body {
   justify-content: space-between;
   align-items: center;
 
+  & #toggle-wrap {
+    flex: 1;
+    display:flex;
+    justify-content: flex-start;
+  }
+
+  & #reset-wrap {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+  & #copy-wrap {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
   & #toggle {
-    justify-self: flex-start;
+    align-self: flex-start;
   }
   & #reset {
-    justify-self: center;
+    align-self: center;
   }
   & #copy {
-    justify-self: flex-end;
+    align-self: flex-end;
   }
 }
 
